<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movies"
            type="com.jetpack.module012.data.room.MovieEntity" />

        <variable
            name="tvShows"
            type="com.jetpack.module012.data.room.TVShowEntity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/detail"
        tools:context=".ui.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:title="@{movies.title ?? tvShows.title}"
                app:contentScrim="@color/purple_700"
                app:expandedTitleMarginBottom="20dp"
                app:expandedTitleMarginStart="15dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    imageUrl="@{movies.backdrop ?? tvShows.backdrop}"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/poster"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    tools:title="Detail"
                    app:title="@{movies.title ?? tvShows.title}"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp"
                    android:theme="@style/ThemeOverlay.MaterialComponents.Light"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:background="@color/white"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pb_detail"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/poster"
                    tools:src="@color/purple_700"
                    imageUrl="@{movies.poster ?? tvShows.poster}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/score"
                    android:src="@drawable/ic_rating"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.067"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.186" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    style="@style/TextContent.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/init_score"
                    android:text="@{movies.score.toString() ?? tvShows.score.toString()}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.129"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/duration"
                    android:src="@drawable/ic_language"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.067"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.19" />

                <TextView
                    android:id="@+id/tv_language"
                    style="@style/TextContent.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/init_duration"
                    android:text="@{movies.language ?? tvShows.language}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.139"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/release"
                    android:src="@drawable/ic_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.031"
                    app:layout_constraintStart_toEndOf="@+id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintVertical_bias="0.033" />

                <TextView
                    android:id="@+id/tv_release"
                    style="@style/TextContent.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/init_release"
                    android:text="@{movies.release ?? tvShows.release}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.163"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/TextContent.Title.bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/TextContent.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{movies.overview ?? tvShows.overview}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="1.0"
                    tools:text="@string/init_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end|right"
            app:backgroundTint="@color/white"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/share" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_not_favorite"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end|right"
            app:backgroundTint="@color/white"
            android:layout_marginEnd="63dp"
            android:contentDescription="@string/share" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
